[package]
name = "room"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.16"
log = "0.4.14"
tokio = { version = "1.9.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
